Modificando el nombre del curso de Ansible

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
             <li> Docker: Creando containers sin dolor de cabeza </li>
 
-            <li> Ansible </li>
+            <li> Ansible: Su infraestructura como código </li>
             <li> Integracion continua: Madurez y Productividad en el desarollo de Sofware</li>
             <li>Kubernetes: Introducción a la orquestación de containers</li>
         </ul>
